<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:padding="@dimen/common_padding_five"
              android:layout_height="match_parent">
	<TextView
			android:drawableStart="@drawable/ic_note_red"
			android:padding="@dimen/common_padding_fifteen"
			android:id="@+id/tvAddNote"
			android:textSize="@dimen/semi_medium_text"
			android:drawablePadding="@dimen/common_padding_five"
			android:gravity="start"
			android:textColor="@color/colorPrimary"
			android:text="@string/label_add_note"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	<TextView
			android:drawableStart="@drawable/ic_select_multi"
			android:padding="@dimen/common_padding_fifteen"
			android:id="@+id/tvSelectMulti"
			android:textSize="@dimen/semi_medium_text"
			android:drawablePadding="@dimen/common_padding_five"
			android:gravity="start"
			android:textColor="@color/colorPrimary"
			android:text="@string/label_select"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	
	<TextView
			android:drawableStart="@drawable/ic_share_red"
			android:padding="@dimen/common_padding_fifteen"
			android:id="@+id/tvShare"
			android:textSize="@dimen/semi_medium_text"
			android:drawablePadding="@dimen/common_padding_five"
			android:gravity="start"
			android:textColor="@color/colorPrimary"
			android:text="@string/label_share"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	
	<TextView
			android:drawableStart="@drawable/ic_bookmark_red"
			android:padding="@dimen/common_padding_fifteen"
			android:id="@+id/tvBookmark"
			android:textSize="@dimen/semi_medium_text"
			android:drawablePadding="@dimen/common_padding_five"
			android:gravity="start"
			android:textColor="@color/colorPrimary"
			android:text="@string/label_bookmark"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	
	<TextView
			android:drawableStart="@drawable/ic_content_copy"
			android:padding="@dimen/common_padding_fifteen"
			android:id="@+id/tvCopy"
			android:textSize="@dimen/semi_medium_text"
			android:drawablePadding="@dimen/common_padding_five"
			android:gravity="start"
			android:textColor="@color/colorPrimary"
			android:text="@string/label_copy"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	
	<TextView
			android:drawableStart="@drawable/ic_tag_verse"
			android:padding="@dimen/common_padding_fifteen"
			android:id="@+id/tvTag"
			android:textSize="@dimen/semi_medium_text"
			android:drawablePadding="@dimen/common_padding_five"
			android:gravity="start"
			android:textColor="@color/colorPrimary"
			android:text="@string/label_favourite"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
</LinearLayout>